# plotter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/sciplot/: Canvas.hpp  Utils.hpp
include/sciplot/specs/: TicsSpecsMajor.hpp
src/: main.cpp
